Rewrite plugin file obtain code